--- a/css/styles.css
+++ b/css/styles.css
@@ -2409,8 +2409,8 @@ table td:nth-child(3) {
     right: 0;
     margin: auto;
     width: 100%;
-    height: 817px;
-    background: url(../img/kv.jpg) center 0 no-repeat;
+    height: 813px;
+    background: url(../img/kv.jpg) center -55px no-repeat;
     background-size: cover;
 }
 
@@ -2908,10 +2908,6 @@ table td:nth-child(3) {
 
     .lk-decor2 {
         right: -850px;
-    }
-
-    .kv {
-        background-position: 20px 0;
     }
 
     .inst-label {
