--- a/css/styles.css
+++ b/css/styles.css
@@ -2593,7 +2593,7 @@ table td:nth-child(3) {
     width: 100%;
     height: 1000px;
     background: url(../img/bg-inner.jpg) center 0 no-repeat;
-    background-size: 100%;
+    background-size: 100% 100%;
     z-index: -1;
 }
 
@@ -2707,6 +2707,13 @@ table td:nth-child(3) {
 .prize3 .prize-img img {
     position: absolute;
     top: -20px;
+}
+
+.prize34 .prize-img img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 160px;
 }
 
 .prize4 .prize-img img {
@@ -2880,6 +2887,10 @@ table td:nth-child(3) {
     	max-width: 1030px;
     }
 
+    .prizes-block .container {
+        max-width: 1230px;
+    }
+
     .menu-links {
 	    max-width: 700px;
     }
@@ -2917,7 +2928,8 @@ table td:nth-child(3) {
 }
 
 @media (max-width: 1000px) {
-	.container {
+	.container,
+    .prizes-block .container {
 		max-width: 375px;
     }
 
@@ -3564,7 +3576,8 @@ table td:nth-child(3) {
 
     .prize1,
     .prize2,
-    .prize3 {
+    .prize3,
+    .prize34 {
         margin-bottom: 40px;
     }
 
